// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultTestViewContainerProvider can create assessment automated checks test view container 1`] = `
<AdhocIssuesTestView
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  cardSelectionMessageCreator={{}}
  cardsViewData={{}}
  includeStepsText={false}
  instancesSection={[Function]}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={
    {
      "selectedFastPassDetailsView": 0,
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create assessment test view container 1`] = `
<AssessmentTestView
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={
    {
      "selectedFastPassDetailsView": 0,
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create issues test view container 1`] = `
<AdhocIssuesTestView
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  cardSelectionMessageCreator={{}}
  cardsViewData={{}}
  instancesSection={[Function]}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  selectedVisualizationType={0}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={
    {
      "selectedFastPassDetailsView": 0,
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create needs review test view container 1`] = `
<AdhocIssuesTestView
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  cardSelectionMessageCreator={{}}
  cardsViewData={{}}
  instancesSection={[Function]}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  selectedVisualizationType={0}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={
    {
      "selectedFastPassDetailsView": 0,
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create static test view container 1`] = `
<AdhocStaticTestView
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={
    {
      "selectedFastPassDetailsView": 0,
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create tab stops test view container 1`] = `
<AdhocTabStopsTestView
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={
    {
      "selectedFastPassDetailsView": 0,
    }
  }
/>
`;
